--- a/index.html
+++ b/index.html
@@ -1,133 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chocoyo Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-</head>
-<header>
+    <title>Chocoyo Portfolio</title>
+  </head>
+  <body>
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-dark header">
-        <a class="navbar-brand" href="#">Chocoyo Portfolio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#about">About Me<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Contact Me
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#email">Email</a>
-                        <a class="dropdown-item" href="#linkedin">LinkedIn</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+    <header>
+      <!-- Logo -->
+      <h1>Chocoyo Portfolio</h1>
+      <!-- End of Logo -->
+      <!-- Navigation -->
+      <nav>
+        <!-- Links -->
+        <div class="content">
+          <a href="#about">About Me</a>
+          <a href="#projects">Projects</a>
+          <a href="#contact">Contact Me</a>
+          <a href="https://www.linkedin.com/in/japinell/" target="_blank"
+            >Resume</a
+          >
         </div>
-    </nav>
+        <!-- End of Links -->
+      </nav>
+      <!-- End of Navigation -->
+    </header>
     <!-- End of Header -->
-</header>
- <!-- Main Picture -->
- <figure class="hero"></figure>
- <!-- End of Main Picture -->
-<main>
+    <!-- Main Picture -->
+    <figure class="hero"></figure>
+    <!-- End of Main Picture -->
     <!-- Main -->
-    <div class="container main">
-        <div class="row">
-            <!-- About Me -->
-            <h1 class="display-1">About Me</h1>
-            <div class="col-12 p-3">
-                <p>Welcome to my website!</p>
-                <p>
-                    My name is Rigo A Pinell. I am a software engineer and software
-                    engineering manager, and I specialize in building applications for
-                    desktop, web, and mobile devices. Besides being passionate about
-                    technology, I also love to spend time with my wife and my two kids.
-                </p>
-                <div class="polaroid">
-                    <img class="family" src="./assets/images/family.jpg" alt="Family" width="100%" />
-                    <div class="label">
-                        <p>Halloween, 2015</p>
-                    </div>
-                </div>
-                <p>
-                    I was born in Nicaragua, where the name <q>Chocoyo</q> is familiar.
-                    To learn more about chocoyos, here is a quote from Wikipedia:
-                </p>
-                <blockquote cite="https://en.wikipedia.org/wiki/Chocoyero-El_Brujo_Natural_Reserve">
-                    Chocoyero-El Brujo Natural Reserve (Spanish: Reserva Natural El
-                    Chocoyero-El Brujo) is located in the municipality of Ticuantepe in
-                    the Managua department of Nicaragua. Chocoyero-El Brujo is one of 78
-                    protected areas in Nicaragua, and at just 455 acres (1.8 km2) this
-                    tropical forest is one of the smallest in size. Chocoyero-El Brujo
-                    was declared a natural reserve in 1993 is managed by the Ministry of
-                    the Environment and Natural Resources (MARENA).[1]
-                </blockquote>
-            </div>
-            <!-- End of About Me -->
-            <!-- Weather/Forecast -->
-            <div class="col-lg-8 col-md-12">
-                <!-- City Weather Information -->
-                <div class="row d-flex flex-row justify-content-around ml-lg-1 p-lg-2 weather" id="weather">
-                    <!-- Daily wheater -->
-                    <!-- Built dynamically -->
-                    <!-- End of Daily weather -->
-                </div>
-                <!-- End of City Weather Information -->
-                <!-- Forecast Information -->
-                <div class="row d-flex flex-row justify-content-around ml-lg-1 p-lg-2 forecast" id="forecast">
-                    <!-- Days -->
-                    <!-- Built dynamically -->
-                    <!-- End of Days -->
-                </div>
-                <!-- End of Forecast Information -->
-            </div>
-            <!-- End of Weather/Forecast -->
+    <main>
+      <!-- About -->
+      <section id="about" class="container">
+        <div class="heading">
+          <h1>About Me</h1>
         </div>
-    </div>
-    </div>
+        <div class="content">
+          <p>Welcome to my website!</p>
+          <p>
+            My name is Rigo A. Pinell, and I am a software engineer and software
+            engineering manager. I specialize in building applications for
+            desktop, web, and mobile devices. Besides being passionate about
+            technology, I also love to spend time with my wife and my two kids.
+          </p>
+          <div class="polaroid">
+            <img
+              class="family"
+              src="./assets/images/family.jpg"
+              alt="Family"
+              width="100%"
+            />
+            <div class="label">
+              <p>Halloween, 2015</p>
+            </div>
+          </div>
+          <p>
+            I was born in Nicaragua, where the name <q>Chocoyo</q> is familiar.
+            To learn more about chocoyos, here is a quote from Wikipedia:
+          </p>
+          <blockquote
+            cite="https://en.wikipedia.org/wiki/Chocoyero-El_Brujo_Natural_Reserve"
+          >
+            Chocoyero-El Brujo Natural Reserve (Spanish: Reserva Natural El
+            Chocoyero-El Brujo) is located in the municipality of Ticuantepe in
+            the Managua department of Nicaragua. Chocoyero-El Brujo is one of 78
+            protected areas in Nicaragua, and at just 455 acres (1.8 km2) this
+            tropical forest is one of the smallest in size. Chocoyero-El Brujo
+            was declared a natural reserve in 1993 is managed by the Ministry of
+            the Environment and Natural Resources (MARENA).[1]
+          </blockquote>
+        </div>
+      </section>
+      <!-- End of About -->
+      <!-- Projects -->
+      <section id="projects" class="container">
+        <div class="heading">
+          <h1>My Projects</h1>
+        </div>
+        <div class="content project-card">
+          <!-- Full-->
+          <div class="full">
+            <h4>Project 1</h4>
+            <a
+              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+              target="_blank"
+            >
+              <img src="./assets/images/arborday.jpg" alt="Project 1" />
+            </a>
+            <h5>
+              <a
+                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>GitHub</a
+              >
+              <a
+                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>Website</a
+              >
+            </h5>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Bootstrap</li>
+              <li>JQuery</li>
+            </ul>
+          </div>
+          <!-- Enf of Full-->
+          <!-- Split-->
+          <div class="split">
+            <h4>Project 2</h4>
+            <a
+              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+              target="_blank"
+            >
+              <img src="./assets/images/arborday.jpg" alt="Project 2" />
+            </a>
+            <h5>
+              <a
+                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>GitHub</a
+              >
+              <a
+                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio/"
+                target="_blank"
+                >>>Website</a
+              >
+            </h5>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+          <div class="split">
+            <h4>Project 3</h4>
+            <a
+              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+              target="_blank"
+            >
+              <img src="./assets/images/arborday.jpg" alt="Project 3" />
+            </a>
+            <h5>
+              <a
+                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>GitHub</a
+              >
+              <a
+                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio/"
+                target="_blank"
+                >>>Website</a
+              >
+            </h5>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+          <div class="split">
+            <h4>Project 4</h4>
+            <a
+              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+              target="_blank"
+            >
+              <img src="./assets/images/arborday.jpg" alt="Project 4" />
+            </a>
+            <h5>
+              <a
+                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>GitHub</a
+              >
+              <a
+                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>Website</a
+              >
+            </h5>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+          <div class="split">
+            <h4>Project 5</h4>
+            <a
+              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+              target="_blank"
+            >
+              <img src="./assets/images/arborday.jpg" alt="Project 5" />
+            </a>
+            <h5>
+              <a
+                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>GitHub</a
+              >
+              <a
+                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
+                target="_blank"
+                >>>Website</a
+              >
+            </h5>
+            <ul>
+              <li>HTML</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+          <!-- End of Split -->
+        </div>
+      </section>
+      <!-- End of Projects -->
+    </main>
     <!-- End of Main -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
-    </script>
-    <script src="https://unpkg.com/dayjs@1.10.4/dayjs.min.js"></script>
-    <script src="https://unpkg.com/dayjs@1.10.4/plugin/advancedFormat.js"></script>
-    <script src="https://unpkg.com/dayjs@1.10.4/plugin/weekOfYear.js"></script>
-    <script>
-        dayjs.extend(window.dayjs_plugin_advancedFormat);
-        dayjs.extend(window.dayjs_plugin_weekOfYear);
-    </script>
-    <!-- Custom JavaScript -->
-    <script src="./assets/js/script.js"></script>
-</main>
-
+    <!-- Footer -->
+    <footer id="contact">
+      <!-- Logo -->
+      <h1>Contact Me</h1>
+      <h2>
+        These are the ways you can find me, connect with me, or follow me:
+      </h2>
+      <!-- End of Logo -->
+      <!-- Navigation -->
+      <nav>
+        <!-- Links -->
+        <div class="content">
+          <a href="" target="" class="phone"> 1-800-123-4567 </a>
+          <a href="mailto:customer@chocoyo.com" target="_blank" class="email">
+            customer@chocoyo.com
+          </a>
+          <a href="https://github.com/japinell" target="_blank" class="github"
+            >https://github.com/japinell</a
+          >
+          <a href="https://twitter.com/japinell" target="_blank" class="twitter"
+            >https://twitter.com/japinell</a
+          >
+          <a href="https://spotify.com/japinell" target="_blank" class="spotify"
+            >https://spotify.com/japinell</a
+          >
+        </div>
+        <!-- End of Links -->
+      </nav>
+      <!-- End of Navigation -->
+    </footer>
+    <!-- End of Header -->
+  </body>
 </html>
