--- a/index.html
+++ b/index.html
@@ -24,21 +24,58 @@
   <body>
     <!-- Header -->
     <header>
-      <!-- Logo -->
-      <h1>Chocoyo Portfolio</h1>
-      <!-- End of Logo -->
       <!-- Navigation -->
-      <nav>
-        <!-- Links -->
-        <div class="content">
-          <a href="#about">About Me</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact Me</a>
-          <a href="https://www.linkedin.com/in/japinell/" target="_blank"
-            >Resume</a
-          >
+      <nav class="navbar navbar-expand-lg">
+        <h1 class="navbar-brand">Chocoyo Portfolio</h1>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#about"
+                >About Me <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#history">History</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Contact
+              </a>
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <a class="dropdown-item" href="#">E-Mail</a>
+                <a class="dropdown-item" href="#">LinkedIn</a>
+                <a class="dropdown-item" href="#">GitHub</a>
+              </div>
+            </li>
+          </ul>
         </div>
-        <!-- End of Links -->
       </nav>
       <!-- End of Navigation -->
     </header>
@@ -48,190 +85,282 @@
     <!-- End of Main Picture -->
     <!-- Main -->
     <main>
-      <!-- About -->
-      <section id="about" class="container">
-        <div class="heading">
-          <h1>About Me</h1>
-        </div>
-        <div class="content">
-          <p>Welcome to my website!</p>
-          <p>
-            My name is Rigo A. Pinell, and I am a software engineer and software
-            engineering manager. I specialize in building applications for
-            desktop, web, and mobile devices. Besides being passionate about
-            technology, I also love to spend time with my wife and my two kids.
-          </p>
-          <div class="polaroid">
-            <img
-              class="family"
-              src="./assets/images/family.jpg"
-              alt="Family"
-              width="100%"
-            />
-            <div class="label">
-              <p>Halloween, 2015</p>
-            </div>
-          </div>
-          <p>
-            I was born in Nicaragua, where the name <q>Chocoyo</q> is familiar.
-            To learn more about chocoyos, here is a quote from Wikipedia:
-          </p>
-          <blockquote
-            cite="https://en.wikipedia.org/wiki/Chocoyero-El_Brujo_Natural_Reserve"
+      <!-- About Me -->
+      <section id="about">
+        <h1 class="display-4">
+          About Me
+          <button
+            class="btn btn-warning"
+            type="button"
+            data-toggle="collapse"
+            data-target="#aboutMe"
+            aria-expanded="false"
+            aria-controls="aboutMe"
+            id="showAboutMe"
           >
-            Chocoyero-El Brujo Natural Reserve (Spanish: Reserva Natural El
-            Chocoyero-El Brujo) is located in the municipality of Ticuantepe in
-            the Managua department of Nicaragua. Chocoyero-El Brujo is one of 78
-            protected areas in Nicaragua, and at just 455 acres (1.8 km2) this
-            tropical forest is one of the smallest in size. Chocoyero-El Brujo
-            was declared a natural reserve in 1993 is managed by the Ministry of
-            the Environment and Natural Resources (MARENA).[1]
-          </blockquote>
+            <i
+              class="fas fa-chevron-up"
+              aria-hidden="true"
+              id="showAboutMeIcon"
+            ></i>
+          </button>
+        </h1>
+        <div class="collapse" id="aboutMe">
+          <div class="card card-body">
+            <p>
+              My name is Rigo A. Pinell. I am a Senior IT Manager experienced in
+              planning, managing, leading, and delivering IT strategy and
+              projects. I combine a unique blend of formal education, technology
+              acumen, managerial and personal traits, and a business mindset to
+              deliver continuous improvement, compliance, and innovation
+              projects. I have earned a Bachelor’s Degree in Computer Science, a
+              Master’s Degree in Project Management, and most recently, a
+              Professional Certificate in Project Management, and I am currently
+              enrolled in the
+              <strong>Flex Stack Coding Boot Camp</strong> at
+              <strong>Kansas University</strong>.
+            </p>
+            <p>
+              I specialize in building applications for desktop, web, and mobile
+              devices. I enjoy learning new topics about business and
+              technology, and I love spending time with my wife and my two kids.
+            </p>
+            <div class="polaroid">
+              <img
+                class="family"
+                src="./assets/images/family.jpg"
+                alt="Family"
+                width="100%"
+              />
+              <div class="label">
+                <p>Halloween, 2015</p>
+              </div>
+            </div>
+            <p>
+              Checkout some of my <a href="#projects">projects</a> below.
+              <a href="#contact">Contact</a> me if you have any questions or
+              comments about my website, or if I can help you plan and deliver
+              your software development projects.
+            </p>
+          </div>
         </div>
       </section>
-      <!-- End of About -->
-      <!-- Projects -->
-      <section id="projects" class="container">
-        <div class="heading">
-          <h1>My Projects</h1>
+      <!-- End of About Me -->
+      <!-- History -->
+      <section id="history">
+        <h1 class="display-4">
+          History
+          <button
+            class="btn btn-warning"
+            type="button"
+            data-toggle="collapse"
+            data-target="#aboutChocoyos"
+            aria-expanded="false"
+            aria-controls="aboutChocoyos"
+            id="showAboutChocoyos"
+          >
+            <i
+              class="fas fa-chevron-up"
+              aria-hidden="true"
+              id="showAboutChocoyosIcon"
+            ></i>
+          </button>
+        </h1>
+        <div class="collapse" id="aboutChocoyos">
+          <div class="card card-body">
+            <p>
+              As an American-Nicaraguan citizen, I intend to create some
+              interest in this beautiful bird commonly known as
+              <strong>chocoyo</strong> by disseminating information about the
+              species and where to find it.
+            </p>
+            <blockquote class="blockquote">
+              <p>
+                The Pacific parakeet or Nicaraguan green conure (Psittacara
+                strenuus) is a species of parakeet. Some ornithologists consider
+                it a subspecies of the green parakeet (Psittacara holochlorus),
+                however it is considered a full species according to the IOC
+                World Bird List.[1]
+              </p>
+              <p>
+                This bird is endemic to a small area in western Nicaragua, the
+                <strong>Brujo Natural Reserve</strong>. Nesting sites lie within
+                this protected area, but the birds still face threats from the
+                outside world when they leave the reserve to feed. Nonetheless,
+                its population is considered not immediately threatened
+                (especially compared to some of its relatives such as the
+                Socorro parakeet), and when BirdLife and the IUCN considered it
+                a good species, it was listed as 'least concern'.
+              </p>
+              <footer class="blockquote-footer">
+                Wikipedia <cite title="Pacific parakeet">Pacific parakeet</cite>
+              </footer>
+            </blockquote>
+          </div>
         </div>
-        <div class="content project-card">
-          <!-- Full-->
-          <div class="full">
-            <h4>Project 1</h4>
-            <a
-              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-              target="_blank"
-            >
-              <img src="./assets/images/arborday.jpg" alt="Project 1" />
-            </a>
-            <h5>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>Website</a
-              >
-            </h5>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Bootstrap</li>
-              <li>JQuery</li>
-            </ul>
+      </section>
+      <!-- End of History -->
+      <!-- Projects -->
+      <section id="projects">
+        <h1 class="display-4">
+          My Projects
+          <button
+            class="btn btn-warning"
+            type="button"
+            data-toggle="collapse"
+            data-target="#myProjects"
+            aria-expanded="false"
+            aria-controls="myProjects"
+            id="showMyProjects"
+          >
+            <i
+              class="fas fa-chevron-up"
+              aria-hidden="true"
+              id="showMyProjectsIcon"
+            ></i>
+          </button>
+        </h1>
+        <div class="collapse" id="myProjects">
+          <div class="card card-body">
+            <div class="content project-card">
+              <!-- Full-->
+              <div class="full">
+                <h4>Project 1</h4>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                  target="_blank"
+                >
+                  <img src="./assets/images/arborday.jpg" alt="Project 1" />
+                </a>
+                <h5>
+                  <a
+                    href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>GitHub</a
+                  >
+                  <a
+                    href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>Website</a
+                  >
+                </h5>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>Bootstrap</li>
+                  <li>JQuery</li>
+                </ul>
+              </div>
+              <!-- Enf of Full-->
+              <!-- Split-->
+              <div class="split">
+                <h4>Project 2</h4>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                  target="_blank"
+                >
+                  <img src="./assets/images/arborday.jpg" alt="Project 2" />
+                </a>
+                <h5>
+                  <a
+                    href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>GitHub</a
+                  >
+                  <a
+                    href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio/"
+                    target="_blank"
+                    >>>Website</a
+                  >
+                </h5>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>Bootstrap</li>
+                </ul>
+              </div>
+              <div class="split">
+                <h4>Project 3</h4>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                  target="_blank"
+                >
+                  <img src="./assets/images/arborday.jpg" alt="Project 3" />
+                </a>
+                <h5>
+                  <a
+                    href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>GitHub</a
+                  >
+                  <a
+                    href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio/"
+                    target="_blank"
+                    >>>Website</a
+                  >
+                </h5>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                </ul>
+              </div>
+              <div class="split">
+                <h4>Project 4</h4>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                  target="_blank"
+                >
+                  <img src="./assets/images/arborday.jpg" alt="Project 4" />
+                </a>
+                <h5>
+                  <a
+                    href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>GitHub</a
+                  >
+                  <a
+                    href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>Website</a
+                  >
+                </h5>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                </ul>
+              </div>
+              <div class="split">
+                <h4>Project 5</h4>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                  target="_blank"
+                >
+                  <img src="./assets/images/arborday.jpg" alt="Project 5" />
+                </a>
+                <h5>
+                  <a
+                    href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>GitHub</a
+                  >
+                  <a
+                    href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
+                    target="_blank"
+                    >>>Website</a
+                  >
+                </h5>
+                <ul>
+                  <li>HTML</li>
+                  <li>JavaScript</li>
+                </ul>
+              </div>
+              <!-- End of Split -->
+            </div>
           </div>
-          <!-- Enf of Full-->
-          <!-- Split-->
-          <div class="split">
-            <h4>Project 2</h4>
-            <a
-              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-              target="_blank"
-            >
-              <img src="./assets/images/arborday.jpg" alt="Project 2" />
-            </a>
-            <h5>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio/"
-                target="_blank"
-                >>>Website</a
-              >
-            </h5>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Bootstrap</li>
-            </ul>
-          </div>
-          <div class="split">
-            <h4>Project 3</h4>
-            <a
-              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-              target="_blank"
-            >
-              <img src="./assets/images/arborday.jpg" alt="Project 3" />
-            </a>
-            <h5>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio/"
-                target="_blank"
-                >>>Website</a
-              >
-            </h5>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Bootstrap</li>
-            </ul>
-          </div>
-          <div class="split">
-            <h4>Project 4</h4>
-            <a
-              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-              target="_blank"
-            >
-              <img src="./assets/images/arborday.jpg" alt="Project 4" />
-            </a>
-            <h5>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>Website</a
-              >
-            </h5>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-            </ul>
-          </div>
-          <div class="split">
-            <h4>Project 5</h4>
-            <a
-              href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-              target="_blank"
-            >
-              <img src="./assets/images/arborday.jpg" alt="Project 5" />
-            </a>
-            <h5>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-2-Portfolio"
-                target="_blank"
-                >>>Website</a
-              >
-            </h5>
-            <ul>
-              <li>HTML</li>
-              <li>JavaScript</li>
-            </ul>
-          </div>
-          <!-- End of Split -->
         </div>
       </section>
       <!-- End of Projects -->
@@ -287,7 +416,6 @@
       dayjs.extend(window.dayjs_plugin_advancedFormat);
       dayjs.extend(window.dayjs_plugin_weekOfYear);
     </script>
-    <!-- Custom JavaScript -->
     <script src="./assets/js/script.js"></script>
     <!-- End of JavaScript Libraries -->
   </body>
