Minor style changes

--- a/index.html
+++ b/index.html
@@ -108,15 +108,16 @@
         <div class="collapse" id="aboutMe">
           <div class="card card-body">
             <p>
-              My name is Rigo A. Pinell. I am a Senior IT Manager experienced in
-              planning, managing, leading, and delivering IT strategy and
-              projects. I combine a unique blend of formal education, technology
-              acumen, managerial and personal traits, and a business mindset to
-              deliver continuous improvement, compliance, and innovation
-              projects. I have earned a Bachelor’s Degree in Computer Science, a
-              Master’s Degree in Project Management, and most recently, a
-              Professional Certificate in Project Management, and I am currently
-              enrolled in the
+              My name is <mark>Rigo A. Pinell</mark>. I am a
+              <mark>Senior IT Manager</mark>
+              experienced in planning, managing, leading, and delivering IT
+              strategy and projects. I combine a unique blend of formal
+              education, technology acumen, managerial and personal traits, and
+              a business mindset to deliver continuous improvement, compliance,
+              and innovation projects. I have earned a Bachelor’s Degree in
+              Computer Science, a Master’s Degree in Project Management, and
+              most recently, a Professional Certificate in Project Management,
+              and I am currently enrolled in the
               <strong>Flex Stack Coding Boot Camp</strong> at
               <strong>Kansas University</strong>.
             </p>
@@ -133,7 +134,7 @@
                 width="100%"
               />
               <div class="label">
-                <p>Halloween, 2015</p>
+                <p><em>Halloween, 2015</em></p>
               </div>
             </div>
             <p>
@@ -174,28 +175,26 @@
               <strong>chocoyo</strong> by disseminating information about the
               species and where to find it.
             </p>
-            <blockquote class="blockquote">
-              <p>
-                The Pacific parakeet or Nicaraguan green conure (Psittacara
-                strenuus) is a species of parakeet. Some ornithologists consider
-                it a subspecies of the green parakeet (Psittacara holochlorus),
-                however it is considered a full species according to the IOC
-                World Bird List.[1]
-              </p>
-              <p>
-                This bird is endemic to a small area in western Nicaragua, the
-                <strong>Brujo Natural Reserve</strong>. Nesting sites lie within
-                this protected area, but the birds still face threats from the
-                outside world when they leave the reserve to feed. Nonetheless,
-                its population is considered not immediately threatened
-                (especially compared to some of its relatives such as the
-                Socorro parakeet), and when BirdLife and the IUCN considered it
-                a good species, it was listed as 'least concern'.
-              </p>
-              <footer class="blockquote-footer">
-                Wikipedia <cite title="Pacific parakeet">Pacific parakeet</cite>
-              </footer>
-            </blockquote>
+            <p>
+              Below is a quote from Wikipedia providing some useful information:
+            </p>
+            <p>
+              The <em>Pacific parakeet</em> or
+              <em>Nicaraguan green conure</em> (Psittacara strenuus) is a
+              species of parakeet. Some ornithologists consider it a subspecies
+              of the green parakeet (Psittacara holochlorus), however it is
+              considered a full species according to the IOC World Bird List.[1]
+            </p>
+            <p>
+              This bird is endemic to a small area in western Nicaragua, the
+              <strong>Brujo Natural Reserve</strong>. Nesting sites lie within
+              this protected area, but the birds still face threats from the
+              outside world when they leave the reserve to feed. Nonetheless,
+              its population is considered not immediately threatened
+              (especially compared to some of its relatives such as the Socorro
+              parakeet), and when BirdLife and the IUCN considered it a good
+              species, it was listed as 'least concern'.
+            </p>
           </div>
         </div>
       </section>
