Updated contact links in nav bar

--- a/index.html
+++ b/index.html
@@ -70,8 +70,18 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <a class="dropdown-item" href="#">E-Mail</a>
-                <a class="dropdown-item" href="#">LinkedIn</a>
-                <a class="dropdown-item" href="#">GitHub</a>
+                <a
+                  class="dropdown-item"
+                  href="https://linkedin.com/in/japinell"
+                  target="_blank"
+                  >LinkedIn</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="https://github.com/japinell"
+                  target="_blank"
+                  >GitHub</a
+                >
               </div>
             </li>
           </ul>
@@ -220,141 +230,145 @@
           </button>
         </h1>
         <div class="collapse" id="myProjects">
-          <!-- Project 1 -->
-          <div
-            class="row d-flex flex-row justify-content-around col-12 text-center"
-          >
-            <div class="card-header">
-              <strong>Project 1 - Delivery Done Right</strong>
+          <div class="row">
+            <!-- Project 1 -->
+            <div
+              class="row d-flex flex-row justify-content-around col-12 text-center"
+            >
+              <div class="card-header">
+                <strong>Project 1 - Delivery Done Right</strong>
+              </div>
+              <img
+                class="card-img-top"
+                src="./assets/images/project1.png"
+                alt="Delivery Done Right"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  Web application that allows users to search and filter
+                  restaurants by predefined criteria. Features include a Google
+                  Map and a list of restaurants near by the user, whether the
+                  restaurant has an option to deliver, and nutrition information
+                  of the restaurant offering.
+                </p>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Project-1-Delivery-Done-Right"
+                  target="_blank"
+                  class="btn btn-warning"
+                  >GitHub</a
+                >
+                <a
+                  href="https://japinell.github.io/KU-CBC-Project-1-Delivery-Done-Right/"
+                  target="_blank"
+                  class="btn btn-warning"
+                  >Website</a
+                >
+              </div>
+              <div class="card-body">
+                <ul
+                  class="d-flex flex-row justify-content-around list-group list-group-horizontal"
+                >
+                  <li><span class="badge badge-secondary">HTML</span></li>
+                  <li><span class="badge badge-secondary">CSS</span></li>
+                  <li><span class="badge badge-secondary">JavaScript</span></li>
+                  <li><span class="badge badge-secondary">BootStrap</span></li>
+                  <li><span class="badge badge-secondary">JQuery</span></li>
+                </ul>
+              </div>
             </div>
-            <img
-              class="card-img-top"
-              src="./assets/images/project1.png"
-              alt="Delivery Done Right"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                Web application that allows users to search and filter
-                restaurants by predefined criteria. Features include a Google
-                Map and a list of restaurants near by the user, whether the
-                restaurant has an option to deliver, and nutrition information
-                of the restaurant offering.
-              </p>
-              <a
-                href="https://github.com/japinell/KU-CBC-Project-1-Delivery-Done-Right"
-                target="_blank"
-                class="btn btn-warning"
-                >GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Project-1-Delivery-Done-Right/"
-                target="_blank"
-                class="btn btn-warning"
-                >Website</a
-              >
-            </div>
-            <div class="card-body">
-              <ul
-                class="d-flex flex-row justify-content-around list-group list-group-horizontal"
-              >
-                <li><span class="badge badge-secondary">HTML</span></li>
-                <li><span class="badge badge-secondary">CSS</span></li>
-                <li><span class="badge badge-secondary">JavaScript</span></li>
-                <li><span class="badge badge-secondary">BootStrap</span></li>
-                <li><span class="badge badge-secondary">JQuery</span></li>
-              </ul>
-            </div>
+            <!-- End of Project 1 -->
           </div>
-          <!-- End of Project 1 -->
-          <!-- Project 2 -->
-          <div
-            class="row d-flex flex-row justify-content-around col-4 text-center"
-          >
-            <div class="card-header">
-              <strong>Project 2 - Weather Dashboard</strong>
+          <div class="row">
+            <!-- Project 2 -->
+            <div
+              class="row d-flex flex-row justify-content-around col-6 text-center"
+            >
+              <div class="card-header">
+                <strong>Project 2 - Weather Dashboard</strong>
+              </div>
+              <img
+                class="card-img-top"
+                src="./assets/images/weather-dashboard.png"
+                alt="Weather Dashboard"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  A weather dashboard that runs in the browser and use the
+                  <strong>OpenWeather One Call API</strong> to retrieve weather
+                  data for cities. The application renders data using HTML
+                  generated dynamically and uses localStorage to store
+                  persistent data.
+                </p>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-6-Weather-Dashboard/"
+                  target="_blank"
+                  class="btn btn-warning"
+                  >GitHub</a
+                >
+                <a
+                  href="https://japinell.github.io/KU-CBC-Homework-6-Weather-Dashboard/"
+                  target="_blank"
+                  class="btn btn-warning"
+                  >Website</a
+                >
+              </div>
+              <div class="card-body">
+                <ul
+                  class="d-flex flex-row justify-content-around list-group list-group-horizontal"
+                >
+                  <li><span class="badge badge-secondary">HTML</span></li>
+                  <li><span class="badge badge-secondary">CSS</span></li>
+                  <li><span class="badge badge-secondary">JavaScript</span></li>
+                  <li><span class="badge badge-secondary">BootStrap</span></li>
+                  <li><span class="badge badge-secondary">JQuery</span></li>
+                </ul>
+              </div>
             </div>
-            <img
-              class="card-img-top"
-              src="./assets/images/weather-dashboard.png"
-              alt="Weather Dashboard"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                A weather dashboard that runs in the browser and use the
-                <strong>OpenWeather One Call API</strong> to retrieve weather
-                data for cities. The application renders data using HTML
-                generated dynamically and uses localStorage to store persistent
-                data.
-              </p>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-6-Weather-Dashboard/"
-                target="_blank"
-                class="btn btn-warning"
-                >GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-6-Weather-Dashboard/"
-                target="_blank"
-                class="btn btn-warning"
-                >Website</a
-              >
+            <!-- End of Project 2 -->
+            <!-- Project 3 -->
+            <div
+              class="row d-flex flex-row justify-content-around col-6 text-center"
+            >
+              <div class="card-header">
+                <strong>Project 3 - JavaScript Fundamentals Code Quiz</strong>
+              </div>
+              <img
+                class="card-img-top"
+                src="./assets/images/code-quiz.png"
+                alt="Weather Dashboard"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  A timed coding quiz with multiple-choice questions. This web
+                  application runs in the browser and features dynamically
+                  updated HTML and CSS powered by JavaScript. It has a clean,
+                  polished, and responsive user interface.
+                </p>
+                <a
+                  href="https://github.com/japinell/KU-CBC-Homework-4-Code-Quiz/"
+                  target="_blank"
+                  class="btn btn-warning"
+                  >GitHub</a
+                >
+                <a
+                  href="https://japinell.github.io/KU-CBC-Homework-4-Code-Quiz/"
+                  target="_blank"
+                  class="btn btn-warning"
+                  >Website</a
+                >
+              </div>
+              <div class="card-body">
+                <ul
+                  class="d-flex flex-row justify-content-around list-group list-group-horizontal"
+                >
+                  <li><span class="badge badge-secondary">HTML</span></li>
+                  <li><span class="badge badge-secondary">CSS</span></li>
+                  <li><span class="badge badge-secondary">JavaScript</span></li>
+                </ul>
+              </div>
             </div>
-            <div class="card-body">
-              <ul
-                class="d-flex flex-row justify-content-around list-group list-group-horizontal"
-              >
-                <li><span class="badge badge-secondary">HTML</span></li>
-                <li><span class="badge badge-secondary">CSS</span></li>
-                <li><span class="badge badge-secondary">JavaScript</span></li>
-                <li><span class="badge badge-secondary">BootStrap</span></li>
-                <li><span class="badge badge-secondary">JQuery</span></li>
-              </ul>
-            </div>
+            <!-- End of Project 3 -->
           </div>
-          <!-- End of Project 2 -->
-          <!-- Project 3 -->
-          <div
-            class="row d-flex flex-row justify-content-around col-4 text-center"
-          >
-            <div class="card-header">
-              <strong>Project 3 - JavaScript Fundamentals Code Quiz</strong>
-            </div>
-            <img
-              class="card-img-top"
-              src="./assets/images/code-quiz.png"
-              alt="Weather Dashboard"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                A timed coding quiz with multiple-choice questions. This web
-                application runs in the browser and features dynamically updated
-                HTML and CSS powered by JavaScript. It has a clean, polished,
-                and responsive user interface.
-              </p>
-              <a
-                href="https://github.com/japinell/KU-CBC-Homework-4-Code-Quiz/"
-                target="_blank"
-                class="btn btn-warning"
-                >GitHub</a
-              >
-              <a
-                href="https://japinell.github.io/KU-CBC-Homework-4-Code-Quiz/"
-                target="_blank"
-                class="btn btn-warning"
-                >Website</a
-              >
-            </div>
-            <div class="card-body">
-              <ul
-                class="d-flex flex-row justify-content-around list-group list-group-horizontal"
-              >
-                <li><span class="badge badge-secondary">HTML</span></li>
-                <li><span class="badge badge-secondary">CSS</span></li>
-                <li><span class="badge badge-secondary">JavaScript</span></li>
-              </ul>
-            </div>
-          </div>
-          <!-- End of Project 3 -->
         </div>
       </section>
       <!-- End of Projects -->
