--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link"
+                href="./assets/files/resume.pdf"
+                target="_blank"
+                >Resume</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item dropdown">
