Improved the About Me section

--- a/index.html
+++ b/index.html
@@ -120,52 +120,42 @@
             ></i>
           </button>
         </h1>
-        <div class="collapse" id="aboutMe">
-          <div class="card card-body">
-            <p>
-              My name is <mark>Rigo A. Pinell</mark>. I am a
-              <mark>Senior IT Manager</mark>
-              experienced in planning, managing, leading, and delivering IT
-              strategy and projects. I combine a unique blend of formal
-              education, technology acumen, managerial and personal traits, and
-              a business mindset to deliver continuous improvement, compliance,
-              and innovation projects. I have earned a Bachelor’s Degree in
-              Computer Science, a Master’s Degree in Project Management, and
-              most recently, a Professional Certificate in Project Management.
-            </p>
-            <p>
-              I specialize in building applications for desktop, web, and mobile
-              devices, and I enjoy learning new topics about business and
-              technology; for example, I am currently enrolled in the
-              <strong>Flex Stack Coding Boot Camp</strong> at
-              <strong>Kansas University</strong> where I am learning and
-              developing web and mobile applications by applying the latest
-              technologies using HTML, CSS, JavaScript, and frameworks and
-              libraries like Bootstrap, JQuery, NodeJS, DayJS, Google Fonts,
-              Font Awesome, and many more.
-            </p>
-            <p>
-              On my spare time, I enjoy reading books, playing chess and
-              basketball with family and friends, and, of course, investing
-              quality time with my wife and my two kids.
-            </p>
-            <div class="polaroid">
+        <div class="card mb-3" id="aboutMe">
+          <div class="row no-gutters">
+            <div class="col-md-6">
               <img
-                class="family"
-                src="./assets/images/family.jpg"
-                alt="Family"
-                width="100%"
+                class="card-img"
+                src="./assets/images/office.jpg"
+                alt="Office"
+                width="50%"
               />
-              <div class="label">
-                <p><em>Halloween, 2015</em></p>
+            </div>
+            <div class="col-md-6">
+              <div class="card-body">
+                <p class="card-text">
+                  My name is <strong>Rigo A. Pinell</strong>. I specialize in
+                  building applications for desktop, web, and mobile devices. I
+                  am currently enrolled in the
+                  <strong>Flex Stack Coding Boot Camp</strong> at
+                  <strong>Kansas University</strong> where I am learning to
+                  develop web and mobile applications using HTML, CSS,
+                  JavaScript, and many other frameworks and libraries including
+                  Bootstrap, JQuery, NodeJS, DayJS, Google Fonts, and Font
+                  Awesome.
+                </p>
+                <p class="card-text">
+                  On my spare time, I enjoy reading books, playing chess and
+                  basketball with family and friends, and, of course, investing
+                  quality time with my wife and my kids.
+                </p>
+                <p class="card-text">
+                  Interested in knowing more about the <em>cool</em> projects I
+                  am building? Check them out <a href="#projects">here</a>. Want
+                  to connect, follow, or contact me to know more about my
+                  professional career? Click <a href="#contact">here</a>.
+                </p>
               </div>
             </div>
-            <p>
-              Checkout some of my <a href="#projects">projects</a> below.
-              <a href="#contact">Contact</a> me if you have any questions or
-              comments about my website, or if I can help you plan and deliver
-              your software development projects.
-            </p>
           </div>
         </div>
       </section>
