Improved styling of Project 1

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               />
             </div>
             <div class="col-md-6">
-              <div class="card-body">
+              <div class="card-body text-justify">
                 <p class="card-text">
                   My name is <strong>Rigo A. Pinell</strong>. I specialize in
                   building applications for desktop, web, and mobile devices. I
@@ -331,6 +331,65 @@
             <!-- End of Project 3 -->
           </div>
         </div>
+        <!-- Project 1 -->
+        <div class="card col-12 mb-3" id="myProjects">
+          <div class="row no-gutters">
+            <div class="col-md-6">
+              <img
+                class="card-img"
+                src="./assets/images/project1.png"
+                alt="Delivery Done Right"
+                width="50%"
+              />
+            </div>
+            <div class="col-md-6">
+              <div class="card-body text-justify">
+                <div class="card-header text-center">
+                  <strong>Project 1 - Delivery Done Right</strong>
+                </div>
+                <p class="card-text">
+                  Web application that allows users to search and filter
+                  restaurants by predefined input fields, including
+                  <em>food description</em>, <em>zipcode</em>, and
+                  <em>distance radius</em>. Features include a Google Map and a
+                  list of restaurants near by the user, information listing
+                  whether the restaurant has an option to deliver, and
+                  nutritional facts about the food.
+                </p>
+                <p class="card-text">
+                  Check out the application repository in
+                  <a
+                    href="https://github.com/japinell/KU-CBC-Project-1-Delivery-Done-Right"
+                    target="_blank"
+                    >GitHub</a
+                  >, and the live application in
+                  <a
+                    href="https://japinell.github.io/KU-CBC-Project-1-Delivery-Done-Right/"
+                    target="_blank"
+                    >GitHub Pages</a
+                  >.
+                </p>
+                <p class="card-text">
+                  The application uses the following technologies:
+                </p>
+                <ul
+                  class="d-flex flex-row justify-content-around list-group list-group-horizontal"
+                >
+                  <li><span class="badge badge-secondary p-2">HTML</span></li>
+                  <li><span class="badge badge-secondary p-2">CSS</span></li>
+                  <li>
+                    <span class="badge badge-secondary p-2">JavaScript</span>
+                  </li>
+                  <li>
+                    <span class="badge badge-secondary p-2">BootStrap</span>
+                  </li>
+                  <li><span class="badge badge-secondary p-2">JQuery</span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of Project 1-->
       </section>
       <!-- End of Projects -->
     </main>
