--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
         <div class="row col-12 no-gutters">
           <div class="col-md-6">
             <div class="card-header">
-              <img class="card-img" src="./assets/images/project1.png" alt="Delivery Done Right" width="50%" />
+              <a href="https://japinell.github.io/KU-CBC-Project-1-Delivery-Done-Right/" target="_blank">
+                <img class="card-img" src="./assets/images/project1.png" alt="Delivery Done Right" width="50%" />
+              </a>
             </div>
           </div>
           <div class="col-md-6">
@@ -165,7 +167,9 @@
           <!-- Exemplary Homework 1 -->
           <div class="col-md-6">
             <div class="card-header">
-              <img class="card-img" src="./assets/images/weather-dashboard.png" alt="Weather Dashboard" width="50%" />
+              <a href="https://japinell.github.io/KU-CBC-Homework-6-Weather-Dashboard/" target="_blank">
+                <img class="card-img" src="./assets/images/weather-dashboard.png" alt="Weather Dashboard" width="50%" />
+              </a>
             </div>
             <div class="card-body text-justify">
               <p class="card-text text-center">
@@ -205,7 +209,9 @@
           <!-- Exemplary Homework 2 -->
           <div class="col-md-6">
             <div class="card-header">
-              <img class="card-img" src="./assets/images/code-quiz.png" alt="Code Quiz" width="50%" />
+              <a href="https://japinell.github.io/KU-CBC-Homework-4-Code-Quiz/" target="_blank">
+                <img class="card-img" src="./assets/images/code-quiz.png" alt="Code Quiz" width="50%" />
+              </a>
             </div>
             <div class="card-body text-justify">
               <p class="card-text text-center">
