Styled navbar toggler button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg">
       <h1 class="navbar-brand">Chocoyo Portfolio</h1>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -267,9 +267,9 @@
     <nav>
       <!-- Links -->
       <div class="content">
-        <a href="" target="" class="phone"> 1-800-123-4567 </a>
+        <a href="" target="" class="phone"> 1-NOT-DIS-CLOSED </a>
         <a href="mailto:customer@chocoyo.com" target="_blank" class="email">
-          customer@chocoyo.com
+          NOT_DISCLOSED@email.com
         </a>
         <a href="https://github.com/japinell" target="_blank" class="github">https://github.com/japinell</a>
         <a href="https://twitter.com/japinell" target="_blank" class="twitter">https://twitter.com/japinell</a>
