--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col-md-6">
             <div class="card-body text-justify">
               <p class="card-text">
-                My name is <strong>Rigo A. Pinell</strong>. I specialize in
+                My name is <strong>Rigo A Pinell</strong>. I specialize in
                 building applications for desktop, web, and mobile devices. I
                 am currently enrolled in the
                 <strong>Flex Stack Coding Boot Camp</strong> at
