Minor card styling

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- Project 1 -->
         <div class="row col-12 no-gutters">
           <div class="col-md-6">
-            <div class="card-header">
+            <div class="card-header card-custom">
               <a href="https://japinell.github.io/KU-CBC-Project-1-Delivery-Done-Right/" target="_blank">
                 <img class="card-img" src="./assets/images/project1.png" alt="Delivery Done Right" width="50%" />
               </a>
@@ -155,7 +155,7 @@
         <div class="row no-gutters">
           <!-- Exemplary Homework 1 -->
           <div class="col-md-6">
-            <div class="card-header">
+            <div class="card-header card-custom">
               <a href="https://japinell.github.io/KU-CBC-Homework-6-Weather-Dashboard/" target="_blank">
                 <img class="card-img" src="./assets/images/weather-dashboard.png" alt="Weather Dashboard" width="50%" />
               </a>
@@ -197,7 +197,7 @@
           <!-- End of Exemplary Homework 1 -->
           <!-- Exemplary Homework 2 -->
           <div class="col-md-6">
-            <div class="card-header">
+            <div class="card-header card-custom">
               <a href="https://japinell.github.io/KU-CBC-Homework-4-Code-Quiz/" target="_blank">
                 <img class="card-img" src="./assets/images/code-quiz.png" alt="Code Quiz" width="50%" />
               </a>
